# commgestion-web

./: .gitignore  .prettierignore  Pipfile  README.md  app.js  config-dev.toml  constants.js  db.sqlite3  graphs.html  how 8a319ba29d3e51abb7c2a1d702992c3a356d260d  index.html  manage.py  package-lock.json  package.json  per-user.html  public.html  pyproject.toml  user-profile.html
OLD_MODELS_FOR_REFERENCE_ONLY/: application.js  hostmapping.js  usage.js
commgestion/: asgi.py  config.py  settings.py  urls.py  wsgi.py
config/: config.json
db/: UserManager.js
helloDjango/: manage.py
home/: views.py
migrations/: 20191114232421-create-user.js  20191206013456-create-usage.js  20191206014530-create-application.js  20191206021802-create-host-mapping.js  20191206022015-create-user-defined-hosts.js
models/: user.js  userdefinedhosts.js
routes/: README.md  index.js  profile.js  public.js  stats.js  usuario.js
scripts/: create_prod_config.py
stats/: views.py
temp-test/: applicationUser.js
templates/: _layout.html  footer.html  header.html  home.html  navbar.html  network_stats.html  network_users.html  parent.njk  profile.html  profiles.html  public_info.html  stats.html  subscribers.html  usuario_pie.html
tests/: cbor_base_tests.py
traffic_logger/: README.md  apps.py  fake_traffic_detection_function.py  temp_test.py  urls.py  views.py
usuario/: views.py
views/: _layout.njk  footer.njk  index.pug  navbar.njk  parent.html  profile.njk  public_info.njk  stats.njk  usuario_pie.njk
web/: admin.py  forms.py  models.py  network_stats_view.py  populate.py  (+7 more)
(+71 files in other folders)
